--- a/iWork.Web.UI/Template/Default/Controls/grid/table.html
+++ b/iWork.Web.UI/Template/Default/Controls/grid/table.html
@@ -1,5 +1,5 @@
 ﻿<control iv-title="null" iv-observe="false" iv-url="false" iv-action="false">
-    <div class="grid-container" ng-controller="$iv-controller">
+    <div class="grid-container" ng-controller="$iv-controller_table">
         <h3 class="panel-title" ng-show="showFormTitle">$iv-title</h3>
         <table class="table table-striped table-hover ">
             <iv-content>
@@ -7,19 +7,21 @@
         </table>
     </div>
     <script>
-        function $iv-controller($scope, $location, $window, $http) {
-            if('$iv-observe' !== 'false' && '$iv-action' == 'false'){
-                $scope.$on('$iv-observe', function(event, args) {
+
+        iWork.controller('$iv-controller_table', function ($scope, $element, $rootScope, $http) {
+
+            if ('$iv-observe' !== 'false' && '$iv-action' == 'false') {
+                $scope.$on('$iv-observe', function (event, args) {
                     $scope.result = args;
                 });
-            }else{
-                $scope.gridUpdate = function(){
+            } else {
+                $scope.gridUpdate = function () {
                     $http({
-                        method  : 'POST',
-                        url     : rootControllerUrl + "$iv-controller/$iv-action",
+                        method: 'POST',
+                        url: rootControllerUrl + "$iv-controller/$iv-action",
                         // TODO Rreza: remove this line
-                        data    : 'term=a',
-                        headers : { 'Content-Type': 'application/x-www-form-urlencoded' }
+                        data: 'term=a',
+                        headers: { 'Content-Type': 'application/x-www-form-urlencoded' }
                     }).
                     success(function (responseData, status, headers, config) {
                         $scope.result = responseData;
@@ -28,6 +30,6 @@
                     })
                 }();
             }
-        }
+        });
     </script>
 </control>
