--- a/iWork.Web.UI/Template/Default/Controls/input/password.html
+++ b/iWork.Web.UI/Template/Default/Controls/input/password.html
@@ -15,7 +15,11 @@
                    ng-model="$iv-model.$iv-name"
                    ng-required="$iv-required"
                    ng-minlength="$iv-minlength"
-                   ng-maxlength="$iv-maxlength" />
+                   ng-maxlength="$iv-maxlength"
+
+                    />
+
+            <div ng-password-strength="user.password" strength="passStrength"></div>
 
             <validation iv-type="validation"></validation>
 
