--- a/iWork.Web.UI/Template/Default/Layout/Default.html
+++ b/iWork.Web.UI/Template/Default/Layout/Default.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" ng-app="iwork">
+<html xmlns="http://www.w3.org/1999/xhtml" ng-app="iWork">
 <head>
     <meta charset="utf-8">
     <title>Title</title>
@@ -13,20 +13,27 @@
     <link rel="stylesheet" type="text/css" href="/Content/lib/datatables/css/dataTables.bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="/Content/lib/bootstrap-switch/css/bootstrap-switch.css" />
     <link rel="stylesheet" type="text/css" href="/Content/lib/magicsugges/magicsuggest-min.css" />
+
+
+
     <link rel="stylesheet" href="/Content/css/style.css" media="screen">
     <script src="/Content/lib/jquery/jquery-2.1.1.min.js"></script>
     <script src="/Content/lib/bootstrap/js/bootstrap.min.js"></script>
     <script src="/Content/lib/moment.js"></script>
-    
+
     <script src="/Content/lib/datatables/js/jquery.dataTables.js"></script>
     <script src="/Content/lib/datatables/js/dataTables.bootstrap.js"></script>
 
     <script src="/Content/lib/angular/angular.min.js"></script>
+    <script src="/Content/lib/underscore.js"></script>
+    <script src="/Content/lib/unserscore.string.js"></script>
     <script src="/Content/lib/angular/angular-bootstrap-switch.js"></script>
+    <script src="/Content/lib/angular/ng-password-strength.min.js"></script>
+
 
     <script src="/Content/lib/angular-strap/angular-strap.js"></script>
     <script src="/Content/lib/angular-strap/angular-strap.tpl.js"></script>
-    
+
 
 
 
@@ -65,7 +72,7 @@
         <div class="col-md-1 sub-menu hidden-xs fit-height">
             <sidecontent></sidecontent>
         </div>
-        <div class="col-md-11 main-content">
+        <div class="col-md-11 main-content ">
             <content></content>
         </div>
     </div>
