--- a/iWork.Web.UI/Content/css/control.css
+++ b/iWork.Web.UI/Content/css/control.css
@@ -201,6 +201,16 @@
     width: 100%;
     font-size: 11px; }
 
+/*::-webkit-validation-bubble {border:1px solid red !important;}
+::-webkit-validation-bubble-arrow-clipper {border:1px solid red !important;}
+::-webkit-validation-bubble-arrow {border:1px solid red !important;}
+::-webkit-validation-bubble-message {border:1px solid red !important;}*/
+.form-help-message {
+  font-size: 12px;
+  margin-bottom: 10px;
+  color: #999999;
+  text-indent: 10px; }
+
 /* Checklist
 ===================================*/
 .magicsuggest-box .form-control {
