--- a/iWork.Web.UI/Template/Default/Controls/grid/datatables.html
+++ b/iWork.Web.UI/Template/Default/Controls/grid/datatables.html
@@ -23,12 +23,13 @@
         </table>
     </div>
     <script>
-        function $iv-name_grid($rootScope,$scope, $element, $location, $window, $http)  {
+
+        iWork.controller('$iv-name_grid', function ($scope, $element, $rootScope, $location, $window, $http) {
             $.fn.dataTableExt.sErrMode = 'throw';
             $scope.showGridTitle = '$iv-title' !== 'null';
-            $scope.initDatatable = function(){
+            $scope.initDatatable = function () {
                 $scope.dtOptions = {
-                    dom:'$iv-dom',
+                    dom: '$iv-dom',
                     serverSide: $iv-serverside,
                     paginationType: '$iv-pagination-type',
                     displayLength: $iv-display-length,
@@ -36,31 +37,31 @@
                     paging: $iv-paging,
                     searching: $iv-searching,
                     info: $iv-info,
-                    stateSave:$iv-state-save,
-                    lengthMenu:$iv-length-menu,
+                    stateSave: $iv-state-save,
+                    lengthMenu: $iv-length-menu,
                     pageLength: $iv-page-length,
                     fnServerData: function (sUrl, aoData, fnCallback, oSettings) {
-                        if($scope.filteringForm){
+                        if ($scope.filteringForm) {
                             $scope.filteringForm.find('button').button('loading');
                         }
                         var fnCallback2 = function (json) {
                             fnCallback(json);
                             return false;
                         };
-                        if(aoData.length > 0){
+                        if (aoData.length > 0) {
                             var datatabelsRequest = {
-                                draw:aoData[0].value,
+                                draw: aoData[0].value,
                                 columns: aoData[1].value,
                                 order: aoData[2].value,
                                 start: aoData[3].value,
                                 lenght: aoData[4].value,
                                 search: aoData[5].value,
                             };
-                        }else{
-                            requestData={}
+                        } else {
+                            requestData = {}
                         }
-                        if('$iv-observe' !== 'false'){
-                            requestData = $.extend(datatabelsRequest,$scope.filteringFormData)
+                        if ('$iv-observe' !== 'false') {
+                            requestData = $.extend(datatabelsRequest, $scope.filteringFormData)
                         }
                         oSettings.jqXHR = $.ajax({
                             url: oSettings.ajax.url,
@@ -69,44 +70,44 @@
                             type: "GET", //TODO : Get has been change to post by pouya
                             timeout: 10000,
                             success: fnCallback2,
-                            complete:function(){
-                                if($scope.filteringForm){
+                            complete: function () {
+                                if ($scope.filteringForm) {
                                     $scope.filteringForm.find('button').button('reset');
                                 }
                             },
                             cache: false
                         });
                     },
-                    drawCallback: function( settings ) {
+                    drawCallback: function (settings) {
                         $(window).trigger('resize');
                     },
-                    rowCallback: function( row, data ) {
+                    rowCallback: function (row, data) {
                         var columnDef = $scope.aoColumns;
                         var $row = $(row);
-                        $.each(columnDef,function(index,config){
-                            if(config.type == 'btn.edite'){
+                        $.each(columnDef, function (index, config) {
+                            if (config.type == 'btn.edite') {
                                 var $column = $($row.find('td')[index]);
                                 $column.empty();
                                 $column.append($('<span class="update-entity glyphicon glyphicon-pencil"></span>').data({
-                                    'entity-id':data.id,
-                                    'target-form':config.targetForm
+                                    'entity-id': data.id,
+                                    'target-form': config.targetForm
                                 }));
-                            }else if(config.type == 'btn.delete'){
+                            } else if (config.type == 'btn.delete') {
                                 var $column = $($row.find('td')[index]);
                                 $column.empty();
                                 $column.append($('<span class="remove-entity glyphicon glyphicon-trash" ></span>').data({
-                                    'entity-id':data.id,
+                                    'entity-id': data.id,
                                     'model': '$iv-controller',
-                                    'confirm':"true"
+                                    'confirm': "true"
                                 }));
                             }
                         });
                         $(window).trigger('resize');
                     },
-                    preDrawCallback: function( settings ) {
+                    preDrawCallback: function (settings) {
                         $scope.aoColumns = settings.aoColumns;
                     },
-                    columns:[
+                    columns: [
 
                     ]
                 }
@@ -130,41 +131,41 @@
                         type: $this.data('kind'),
                         visible: $this.data('visible'),
                         width: $this.data('width'),
-                        targetForm : $this.data('target-form'),
+                        targetForm: $this.data('target-form'),
                         bSortable: false
                     }
 
                     $scope.dtOptions.columns.push(colDef);
                     $this.remove();
                 });
-                if('$iv-observe' !== 'false' && '$iv-url' == 'false' ){
+                if ('$iv-observe' !== 'false' && '$iv-url' == 'false') {
                     $scope.dtOptions.data = [];
                     $element.hide();
-                }else{
+                } else {
                     $scope.dtOptions.ajax = {
-                        url : '$iv-url'
+                        url: '$iv-url'
                     }
                 }
-                if('$iv-auto-load' === 'true'){
+                if ('$iv-auto-load' === 'true') {
                     $scope.oTable = $element.find('table').dataTable($scope.dtOptions);
                 }
 
             }
             $scope.initDatatable();
-            if('$iv-observe' !== 'false'){
-                $scope.$on('$iv-observe', function(event, form) {
+            if ('$iv-observe' !== 'false') {
+                $scope.$on('$iv-observe', function (event, form) {
                     $scope.filteringForm = form;
                     $scope.filteringFormData = form.serializeObject();
-                    if(!$scope.oTable){
+                    if (!$scope.oTable) {
                         $scope.oTable = $element.find('table').dataTable($scope.dtOptions);
-                    }else{
+                    } else {
                         $scope.reload();
                     }
                 });
             }
-            $scope.reload = function(newData){
+            $scope.reload = function (newData) {
                 $scope.oTable.fnDraw();
             }
-        }
+        });
     </script>
 </control>
