--- a/iWork.Web.UI/Content/css/style.css
+++ b/iWork.Web.UI/Content/css/style.css
@@ -474,7 +474,8 @@ body {
   .form-horizontal .validation-message span {
     display: block;
     width: 100%;
-    font-size: 11px; }
+    font-size: 11px;
+    text-indent: 10px; }
 
 /*::-webkit-validation-bubble {border:1px solid red !important;}
 ::-webkit-validation-bubble-arrow-clipper {border:1px solid red !important;}
@@ -485,6 +486,9 @@ body {
   margin-bottom: 10px;
   color: #999999;
   text-indent: 10px; }
+
+.form-horizontal textarea:invalid, .form-horizontal input:invalid {
+  outline: none; }
 
 /* Checklist
 ===================================*/
