--- a/iWork.Web.UI/Content/css/control.scss
+++ b/iWork.Web.UI/Content/css/control.scss
@@ -12,23 +12,27 @@
 /* Datepicker
 ====================================================*/
 .datepicker.dropdown-menu {
-  width: 250px;
-  height: 270px;
-  button {
-    outline: none;
-    border: 0px;
-  }
-  tbody {
-    height: 180px;
-  }
-  tbody button {
-    padding: 6px;
-  }
-  &.datepicker-mode-1, &.datepicker-mode-2 {
-    tbody button {
-      height: 65px;
+    width: 250px;
+    height: 270px;
+
+    button {
+        outline: none;
+        border: 0px;
     }
-  }
+
+    tbody {
+        height: 180px;
+    }
+
+    tbody button {
+        padding: 6px;
+    }
+
+    &.datepicker-mode-1, &.datepicker-mode-2 {
+        tbody button {
+            height: 65px;
+        }
+    }
 }
 
 /* File uploader
@@ -236,6 +240,7 @@
         display: block;
         width: 100%;
         font-size: 11px;
+        text-indent:10px;
     }
 }
 
@@ -245,13 +250,21 @@
 ::-webkit-validation-bubble-message {border:1px solid red !important;}*/
 
 
-.form-help-message{
-    font-size:12px;
-    margin-bottom:10px;
-    color:#999999;
-    text-indent:10px;
+.form-help-message {
+    font-size: 12px;
+    margin-bottom: 10px;
+    color: #999999;
+    text-indent: 10px;
 }
 
+.form-horizontal {
+   
+    textarea:invalid,
+    input:invalid {
+        outline:none;
+    }
+
+}
 
 /* Checklist
 ===================================*/
