--- a/iWork.Web.UI/Template/Default/Controls/validation/validation.html
+++ b/iWork.Web.UI/Template/Default/Controls/validation/validation.html
@@ -3,6 +3,7 @@
         <span ng-show="$iv-form-name.$iv-name.$error.required">'$iv-label' is required.</span>
         <span ng-show="$iv-form-name.$iv-name.$error.maxlength">'$iv-label' is too long.</span>
         <span ng-show="$iv-form-name.$iv-name.$error.minlength">'$iv-label' is too short.</span>
+        <span ng-show="$iv-form-name.$iv-name.$error.email">Invalid email!! Should be like name@web.com</span>
         <span ng-show="$iv-form-name.$iv-name.$error.pattern">'$iv-label' is not match Pattern.</span>
     </span>
 </control>
