--- a/iWork.Web.UI/Template/Default/Layout/Default.html
+++ b/iWork.Web.UI/Template/Default/Layout/Default.html
@@ -21,19 +21,16 @@
     <script src="/Content/lib/datatables/js/jquery.dataTables.js"></script>
     <script src="/Content/lib/datatables/js/dataTables.bootstrap.js"></script>
     <script src="/Content/lib/angular/angular.min.js"></script>
-    <script src="/Content/lib/underscore.js"></script>
-    <script src="/Content/lib/unserscore.string.js"></script>
     <script src="/Content/lib/angular/angular-bootstrap-switch.js"></script>
     <script src="/Content/lib/angular/ng-password-strength.min.js"></script>
     <script src="/Content/lib/angular-strap/angular-strap.js"></script>
     <script src="/Content/lib/angular-strap/angular-strap.tpl.js"></script>
-    <script src="/Content/lib/angular-datatables/angular-datatables.js"></script>
     <script src="/Content/lib/bootstrap-switch/js/bootstrap-switch.js"></script>
     <script src="/Content/lib/magicsugges/magicsuggest.js"></script>
-    <script type="text/javascript" src="/Content/lib/slick/slick.min.js"></script>
-    <script type="text/javascript" src="/Content/lib/jquery.svginject.js"></script>
-    <script type="text/javascript" src="/Content/lib/dropzone/dropzone.js"></script>
-    <script src="/Content/js/page.js"></script>
+    <script src="/Content/lib/slick/slick.min.js" type="text/javascript"></script>
+    <script src="/Content/lib/jquery.svginject.js" type="text/javascript"></script>
+    <script src="/Content/lib/dropzone/dropzone.js" type="text/javascript"></script>
+    <script src="/Content/js/page.js" type="text/javascript"></script>
 </head>
 <body>
     <nav class="navbar navbar-default navbar-fixed-top">
