--- a/iWork.Entities/ModelGenerator.tt
+++ b/iWork.Entities/ModelGenerator.tt
@@ -2,7 +2,7 @@
 <#@ include file="EF6.Utility.VB.ttinclude"#><#@
  output extension=".vb"#><#
 
-Const inputFile As String = "..\iWork.Repository\iWorkModel.edmx"
+Const inputFile As String = "..\iWork.Repository\EF\iWorkModel.edmx"
 Dim textTransform As DynamicTextTransformation = DynamicTextTransformation.Create(Me)
 Dim code As CodeGenerationTools = New CodeGenerationTools(Me)
 Dim ef As MetadataTools = New MetadataTools(Me)
