--- a/iWork.Web.UI/Template/Default/Layout/login.html
+++ b/iWork.Web.UI/Template/Default/Layout/login.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml" ng-app="iWork">
 <head>
     <meta charset="utf-8">
     <title>Title</title>
@@ -12,6 +12,10 @@
     <script src="/Content/lib/jquery/jquery-2.1.1.min.js"></script>
     <script src="/Content/lib/bootstrap/js/bootstrap.min.js"></script>
     <script src="/Content/lib/angular/angular.min.js"></script>
+    <script src="/Content/js/common.js"></script>
+    <script>
+        var iWork = angular.module('iWork',[]);
+    </script>
 </head>
 <body>
     <div class="page-container">
