--- a/iWork.Web.UI/Template/Default/Layout/Default.html
+++ b/iWork.Web.UI/Template/Default/Layout/Default.html
@@ -31,6 +31,7 @@
     <script src="/Content/lib/jquery.svginject.js" type="text/javascript"></script>
     <script src="/Content/lib/dropzone/dropzone.js" type="text/javascript"></script>
     <script src="/Content/js/page.js" type="text/javascript"></script>
+    <script src="/Content/js/common.js"></script>
 </head>
 <body>
     <nav class="navbar navbar-default navbar-fixed-top">
