--- a/iWork.Web.UI/Content/css/style.css
+++ b/iWork.Web.UI/Content/css/style.css
@@ -5,51 +5,13 @@
   -o-transition: all 400ms ease;
   transition: all 400ms ease; }
 
-/*.sub-menu {
-    -moz-animation-name: dropSubMenu;
-    -moz-animation-iteration-count: 1;
-    -moz-animation-timing-function: ease-in;
-    -moz-animation-duration: 0.5s;
-    -webkit-animation-name: dropSubMenu;
-    -webkit-animation-iteration-count: 1;
-    -webkit-animation-timing-function: ease-in;
-    -webkit-animation-duration: 0.5s;
-    animation-name: dropSubMenu;
-    animation-iteration-count: 1;
-    animation-timing-function: ease-in;
-    animation-duration: 0.5s;
-}
+table * {
+  -webkit-transition: none;
+  -moz-transition: none;
+  -ms-transition: none;
+  -o-transition: none;
+  transition: none; }
 
-
-@-moz-keyframes dropSubMenu {
-    0% {
-        -moz-transform: translateX(-100px);
-    }
-
-    100% {
-        -moz-transform: translateX(0);
-    }
-}
-
-@-webkit-keyframes dropSubMenu {
-    0% {
-        -webkit-transform: translateX(-100px);
-    }
-
-    100% {
-        -webkit-transform: translateX(0);
-    }
-}
-
-@keyframes dropSubMenu {
-    0% {
-        transform: translateX(-100px);
-    }
-
-    100% {
-        transform: translateX(0);
-    }
-}*/
 .navbar {
   -webkit-transition: none;
   -moz-transition: none;
@@ -536,13 +498,20 @@ body {
 /* Iconic button
 ==================================*/
 .btn-iconic {
+  display: block;
+  width: 100%;
+  float: right;
   background-color: #eeeeee;
-  outline: none; }
+  outline: none;
+  text-align: center;
+  margin-top: 5px; }
 
 .btn-iconic:focus, .btn-iconic:active {
   outline: none; }
 
 .btn-iconic span {
+  display: block;
+  width: 100%;
   float: left;
   height: 28px;
   line-height: 28px;
@@ -570,7 +539,53 @@ body {
   fill: #BBBBBB !important;
   width: 24px;
   height: 24px;
-  float: left;
-  margin: 0px 0px 0px 5px; }
+  margin: 0px auto 0px auto; }
+
+body, html {
+  overflow: hidden !important; }
+
+.main-content {
+  overflow-x: hidden;
+  overflow-y: visible;
+  display: block;
+  float: right;
+  height: auto;
+  min-height: 10px !important; }
+
+.page-content {
+  display: block;
+  width: 100%;
+  float: right;
+  background-color: #ffffff;
+  padding: 10px 10px 30px 10px !important;
+  min-height: 100%; }
+
+.slide {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%; }
+
+.slide.ng-enter, .slide.ng-leave {
+  -webkit-transition: all 500ms ease;
+  -moz-transition: all 500ms ease;
+  -o-transition: all 500ms ease;
+  transition: all 500ms ease; }
+
+.slide.ng-enter {
+  left: 100%;
+  opacity: 0; }
+
+.slide.ng-enter-active {
+  left: 0;
+  opacity: 1; }
+
+.slide.ng-leave {
+  left: 0;
+  opacity: 1; }
+
+.slide.ng-leave-active {
+  left: -100%; }
 
 /*# sourceMappingURL=style.css.map */
