--- a/iWork.Web.UI/Template/Default/Controls/button/update.html
+++ b/iWork.Web.UI/Template/Default/Controls/button/update.html
@@ -1,6 +1,3 @@
 ﻿<control iv-action="Update" iv-model="" iv-entity-id="" >
-    <span class="update-entity glyphicon glyphicon-pencil"
-          data-entity-id="$iv-entity-id"
-          data-model="$iv-model"
-          data-target-form="$iv-target-form"></span>
-</control>
+    <a class="update-entity glyphicon glyphicon-pencil"
+       href="$iv-href/$iv-entity-id"></a></control>
