--- a/iWork.Web.UI/Content/css/control.scss
+++ b/iWork.Web.UI/Content/css/control.scss
@@ -343,8 +343,13 @@
 ==================================*/
 
 .btn-iconic {
+    display:block;
+    width:100%;
+    float:right;
     background-color: #eeeeee;
     outline: none;
+    text-align:center;
+    margin-top:5px;
 }
 
 .btn-iconic:focus,
@@ -353,6 +358,8 @@
 }
 
 .btn-iconic span {
+    display:block;
+    width:100%;
     float: left;
     height: 28px;
     line-height: 28px;
@@ -386,6 +393,5 @@
     fill: #BBBBBB !important;
     width: 24px;
     height: 24px;
-    float: left;
-    margin: 0px 0px 0px 5px;
+    margin: 0px auto 0px auto;
 }
