--- a/iWork.Web.UI/Template/Default/Layout/Default.html
+++ b/iWork.Web.UI/Template/Default/Layout/Default.html
@@ -8,20 +8,24 @@
     <!-- Uncomment Next two line for RTL view  -->
     <!--<link rel="stylesheet" href="//cdn.rawgit.com/morteza/bootstrap-rtl/master/dist/cdnjs/3.3.1/css/bootstrap-rtl.css">
     <link rel="stylesheet" href="/Content/css/style.rtl.css" media="screen">-->
-    <link rel="stylesheet" type="text/css" href="/Content/lib/slick/slick.css" />
     <link rel="stylesheet" type="text/css" href="/Content/lib/dropzone/dropzone.css" />
     <link rel="stylesheet" type="text/css" href="/Content/lib/datatables/css/dataTables.bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="/Content/lib/bootstrap-switch/css/bootstrap-switch.css" />
     <link rel="stylesheet" type="text/css" href="/Content/lib/magicsugges/magicsuggest-min.css" />
     <link rel="stylesheet" href="/Content/css/style.css" media="screen">
-
     <script src="/Content/lib/jquery/jquery-2.1.1.min.js"></script>
     <script src="/Content/lib/bootstrap/js/bootstrap.min.js"></script>
+
+    <script src="/Content/lib/bootstrap-lib/bootstrap-confirmation.js"></script>
+
+
+
     <script src="/Content/lib/moment.js"></script>
     <script src="/Content/lib/datatables/js/jquery.dataTables.js"></script>
     <script src="/Content/lib/datatables/js/dataTables.bootstrap.js"></script>
     <script src="/Content/lib/angular/angular.min.js"></script>
     <script src="/Content/lib/angular/angular-route.js"></script>
+    <script src="/Content/lib/angular/angular-animate.js"></script>
 
     <script src="/Content/lib/angular/angular-bootstrap-switch.js"></script>
     <script src="/Content/lib/angular/ng-password-strength.min.js"></script>
@@ -29,7 +33,6 @@
     <script src="/Content/lib/angular-strap/angular-strap.tpl.js"></script>
     <script src="/Content/lib/bootstrap-switch/js/bootstrap-switch.js"></script>
     <script src="/Content/lib/magicsugges/magicsuggest.js"></script>
-    <script src="/Content/lib/slick/slick.min.js" type="text/javascript"></script>
     <script src="/Content/lib/jquery.svginject.js" type="text/javascript"></script>
     <script src="/Content/lib/dropzone/dropzone.js" type="text/javascript"></script>
     <script src="/Content/js/page.js" type="text/javascript"></script>
@@ -42,7 +45,6 @@
         </div>
         <div id="navbar" class="col-md-10 hidden-xs">
             <ul class="nav navbar-nav">
-                <li><a href="/iView/Rollcall/list.html">RollCall</a></li>
                 <li><a href="/iView/Contacts/list.html">Contact</a></li>
                 <li><a href="/iView/kitchensink/kitchensink.html">kitchensink</a></li>
             </ul>
@@ -57,13 +59,12 @@
         <div class="bottom-inner-shadow"></div>
     </nav>
     <div class="container page-container">
-        <div class="col-md-1 sub-menu hidden-xs fit-height">
+        <div class="col-md-1 sub-menu hidden-xs fit-height" ng-controller="submenu" >
             <sidecontent></sidecontent>
         </div>
         <div class="col-md-11 main-content " >
             <content></content>
-                <ng-view>Loading...</ng-view>
-            
+            <div ng-view class="slide page-content"></div>
         </div>
     </div>
 </body>
