--- a/iWork.Web.UI/Template/Default/Controls/button/delete.html
+++ b/iWork.Web.UI/Template/Default/Controls/button/delete.html
@@ -7,14 +7,6 @@
        data-original-title=""
        data-entity-id="$iv-entity-id"
        data-placement="$iv-placement"
-       data-model="$iv-model"></a>
-    <script>
-        $('[data-toggle="confirmation"]').confirmation({
-            btnOkClass: 'btn-sm btn-danger',
-            btnCancelClass: 'btn-sm btn-default',
-            singleton: true,
-            popout: true
-        });
-    </script>
-
+       data-model="$iv-model"
+       delete-btn></a>
 </control>
