--- a/iWork.Web.UI/Template/Default/Layout/Default.html
+++ b/iWork.Web.UI/Template/Default/Layout/Default.html
@@ -26,6 +26,7 @@
     <script src="/Content/lib/angular/angular.min.js"></script>
     <script src="/Content/lib/angular/angular-route.js"></script>
     <script src="/Content/lib/angular/angular-animate.js"></script>
+   
 
     <script src="/Content/lib/angular/angular-bootstrap-switch.js"></script>
     <script src="/Content/lib/angular/ng-password-strength.min.js"></script>
@@ -35,8 +36,10 @@
     <script src="/Content/lib/magicsugges/magicsuggest.js"></script>
     <script src="/Content/lib/jquery.svginject.js" type="text/javascript"></script>
     <script src="/Content/lib/dropzone/dropzone.js" type="text/javascript"></script>
+
     <script src="/Content/js/page.js" type="text/javascript"></script>
     <script src="/Content/js/common.js"></script>
+    <script src="/Content/js/directives.js"></script>
 </head>
 <body>
     <nav class="navbar navbar-default navbar-fixed-top">
